[gd_scene load_steps=64 format=3 uid="uid://b7jtkjuj8mc1v"]

[ext_resource type="Script" path="res://scenes/scripts/porte.gd" id="1_gy6rq"]
[ext_resource type="Texture2D" uid="uid://du51jxasbphto" path="res://images/propias/Mapa_assets/Puntuacion/guion.png" id="2_iun0h"]
[ext_resource type="Texture2D" uid="uid://dubfmt5fwkxv1" path="res://images/propias/Mapa_assets/Hockey/campo hockey.png" id="3_nvie4"]
[ext_resource type="PackedScene" uid="uid://dlj210fekbvhg" path="res://scenes/Levels/objects/Disco.tscn" id="4_6y8ti"]
[ext_resource type="Script" path="res://scenes/scripts/Character_1.gd" id="4_mjq13"]
[ext_resource type="Texture2D" uid="uid://bthytufmxegd5" path="res://images/propias/Personajes/Objetos/hockey_player1.png" id="5_ar8a7"]
[ext_resource type="Texture2D" uid="uid://b1eb08v7joeoh" path="res://images/propias/Personajes/Objetos/hockey_player2.png" id="6_wnr45"]
[ext_resource type="Script" path="res://scenes/scripts/countdown_hockey.gd" id="7_tmmuo"]
[ext_resource type="Texture2D" uid="uid://by74nf2tlcses" path="res://images/propias/Mapa_assets/Puntuacion/3.png" id="9_1jhwb"]
[ext_resource type="Texture2D" uid="uid://hclkgxsvyfao" path="res://images/propias/Mapa_assets/Puntuacion/2.png" id="10_h3grm"]
[ext_resource type="Texture2D" uid="uid://dmqh18q0qj2y0" path="res://images/propias/Mapa_assets/Puntuacion/0(1).png" id="10_ti68u"]
[ext_resource type="Texture2D" uid="uid://bf85f3sjahhkd" path="res://images/propias/Mapa_assets/Puntuacion/2(1).png" id="10_yhv6y"]
[ext_resource type="Texture2D" uid="uid://d2jk6yh0sdt6v" path="res://images/propias/Mapa_assets/Puntuacion/1.png" id="11_1jggn"]
[ext_resource type="Texture2D" uid="uid://c8w07ahay0ugm" path="res://images/propias/Mapa_assets/Puntuacion/1(1).png" id="11_d36pu"]
[ext_resource type="Texture2D" uid="uid://br3colaaasukr" path="res://images/propias/Mapa_assets/Puntuacion/3(1).png" id="11_s7g8a"]
[ext_resource type="Texture2D" uid="uid://by87d6idxb3kt" path="res://images/propias/Mapa_assets/Puntuacion/0.png" id="12_ihshw"]
[ext_resource type="Texture2D" uid="uid://b660q8ij0nmbp" path="res://images/propias/Mapa_assets/Puntuacion/5.png" id="13_e2kdd"]
[ext_resource type="Texture2D" uid="uid://cxkxyunjgexrv" path="res://images/propias/Mapa_assets/Puntuacion/4.png" id="13_eo8o2"]
[ext_resource type="Texture2D" uid="uid://d05f1km8wxs48" path="res://images/propias/Mapa_assets/Puntuacion/6.png" id="14_sjein"]
[ext_resource type="Texture2D" uid="uid://p7qtrqo1nnyh" path="res://images/propias/Mapa_assets/extras/dialogo/bakground.png" id="15_oifvu"]
[ext_resource type="Texture2D" uid="uid://d2oykjcwovx28" path="res://images/propias/Mapa_assets/Puntuacion/7.png" id="17_fitnu"]
[ext_resource type="Texture2D" uid="uid://be3frcljko0xd" path="res://images/propias/Mapa_assets/Puntuacion/8.png" id="18_idq6l"]
[ext_resource type="Texture2D" uid="uid://xeudk2u38dcv" path="res://images/propias/Mapa_assets/Puntuacion/9.png" id="19_ca2xl"]
[ext_resource type="Texture2D" uid="uid://dhxa727nt6pf4" path="res://images/propias/Mapa_assets/Puntuacion/10.png" id="20_twscc"]
[ext_resource type="Texture2D" uid="uid://b4t7tf4fjll0s" path="res://images/propias/Mapa_assets/Puntuacion/11.png" id="21_e0ha2"]
[ext_resource type="Texture2D" uid="uid://4vqvbxhi4v34" path="res://images/propias/Mapa_assets/Puntuacion/12.png" id="22_hj7k5"]
[ext_resource type="Texture2D" uid="uid://crhtgilm8bvh3" path="res://images/propias/Mapa_assets/Puntuacion/13.png" id="23_qdyov"]
[ext_resource type="Texture2D" uid="uid://cmbjflrs3uwkm" path="res://images/propias/Mapa_assets/Puntuacion/14.png" id="24_j4cax"]
[ext_resource type="Texture2D" uid="uid://ddm7pxagju8sd" path="res://images/propias/Mapa_assets/Puntuacion/15.png" id="25_xjdjh"]
[ext_resource type="Texture2D" uid="uid://bwta7raakdunt" path="res://images/propias/Mapa_assets/Puntuacion/16.png" id="26_r2sda"]
[ext_resource type="PackedScene" uid="uid://dj0atrm2o2f7f" path="res://scenes/Global_Scene.tscn" id="32_bqao5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iooyf"]
size = Vector2(53, 123)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ck6di"]
size = Vector2(37, 535)

[sub_resource type="CircleShape2D" id="CircleShape2D_2w4dl"]
radius = 13.8314

[sub_resource type="CircleShape2D" id="CircleShape2D_8843n"]
radius = 14.4598

[sub_resource type="Animation" id="Animation_rc3v4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(326, 0)]
}

[sub_resource type="Animation" id="Animation_gue6g"]
resource_name = "dif_1"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 1, 1.7, 2, 2.3, 3, 3.7, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(326, 0), Vector2(327.2, -90), Vector2(328, -190), Vector2(327.2, -90), Vector2(326, 0), Vector2(324.2, 99.6), Vector2(323, 190), Vector2(324.2, 99.6), Vector2(326, 0)]
}

[sub_resource type="Animation" id="Animation_a56wg"]
resource_name = "dif_2"
length = 2.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.3, 1.8, 2.3, 2.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(326, 0), Vector2(308, -134), Vector2(265, 0), Vector2(326, 0), Vector2(303, 130), Vector2(265, 0), Vector2(326, 0)]
}

[sub_resource type="Animation" id="Animation_xm0i0"]
resource_name = "dif_3"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.4, 2, 2.5, 3, 3.5, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(326, 0), Vector2(275, -60), Vector2(225, 0), Vector2(275, 60), Vector2(326, 0), Vector2(150, 0), Vector2(326, 0), Vector2(235, -150), Vector2(50, 0), Vector2(235, 150), Vector2(326, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_piu85"]
_data = {
"RESET": SubResource("Animation_rc3v4"),
"dif_1": SubResource("Animation_gue6g"),
"dif_2": SubResource("Animation_a56wg"),
"dif_3": SubResource("Animation_xm0i0")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_xdwc0"]
atlas = ExtResource("10_ti68u")
region = Rect2(33, 32, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_nnrsy"]
atlas = ExtResource("11_d36pu")
region = Rect2(28, 32, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_kn8lv"]
atlas = ExtResource("10_yhv6y")
region = Rect2(29, 45, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_8garh"]
atlas = ExtResource("11_s7g8a")
region = Rect2(31, 37, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_uise0"]
atlas = ExtResource("13_eo8o2")
region = Rect2(37, 50, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_xy5ng"]
atlas = ExtResource("13_e2kdd")
region = Rect2(33, 34, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_quo1y"]
atlas = ExtResource("14_sjein")
region = Rect2(53, 61, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_iodn8"]
atlas = ExtResource("17_fitnu")
region = Rect2(26, 40, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_7sood"]
atlas = ExtResource("18_idq6l")
region = Rect2(25, 30, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_iaoou"]
atlas = ExtResource("19_ca2xl")
region = Rect2(24, 30, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_ckbkq"]
atlas = ExtResource("20_twscc")
region = Rect2(33, 32, 60, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_1leos"]
atlas = ExtResource("21_e0ha2")
region = Rect2(15, 32, 60, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_vphft"]
atlas = ExtResource("22_hj7k5")
region = Rect2(13, 46, 60, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_xkyma"]
atlas = ExtResource("23_qdyov")
region = Rect2(15, 38, 60, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_e20hs"]
atlas = ExtResource("24_j4cax")
region = Rect2(21, 51, 60, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxs8y"]
atlas = ExtResource("25_xjdjh")
region = Rect2(15, 35, 60, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_emqni"]
atlas = ExtResource("26_r2sda")
region = Rect2(37, 62, 60, 30)

[sub_resource type="SpriteFrames" id="SpriteFrames_2f6hq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdwc0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nnrsy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kn8lv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8garh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uise0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xy5ng")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_quo1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iodn8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7sood")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iaoou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ckbkq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1leos")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vphft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xkyma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e20hs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxs8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_emqni")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_bf52x"]
atlas = ExtResource("9_1jhwb")
region = Rect2(4, 5, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_nksif"]
atlas = ExtResource("10_h3grm")
region = Rect2(5, 8, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_yfgey"]
atlas = ExtResource("11_1jggn")
region = Rect2(5, 5, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_tv2do"]
atlas = ExtResource("12_ihshw")
region = Rect2(5, 5, 30, 30)

[sub_resource type="SpriteFrames" id="SpriteFrames_q61uo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bf52x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bf52x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nksif")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nksif")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yfgey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yfgey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tv2do")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tv2do")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"count",
"speed": 2.0
}]

[node name="Node2D" type="Node2D"]

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -731.0
offset_top = -923.0
offset_right = 810.0
offset_bottom = 374.0
texture = ExtResource("15_oifvu")

[node name="Camera2D" type="Camera2D" parent="."]
z_index = 5

[node name="Campo" type="Node2D" parent="."]
script = ExtResource("1_gy6rq")

[node name="porte_1" type="Area2D" parent="Campo"]
position = Vector2(-420, 0)

[node name="Sprite2D2" type="Sprite2D" parent="Campo/porte_1"]
rotation = 1.5708
scale = Vector2(10, 10)
texture = ExtResource("2_iun0h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Campo/porte_1"]
position = Vector2(-6.5, 0.5)
shape = SubResource("RectangleShape2D_iooyf")

[node name="porte_2" type="Area2D" parent="Campo"]
position = Vector2(420, 0)

[node name="Sprite2D" type="Sprite2D" parent="Campo/porte_2"]
rotation = 1.5708
scale = Vector2(10, 10)
texture = ExtResource("2_iun0h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Campo/porte_2"]
shape = SubResource("RectangleShape2D_iooyf")

[node name="Timer_goal" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="paredes" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="paredes"]

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="paredes/StaticBody2D"]
rotation = 3.14159
polygon = PackedVector2Array(399, 90.001, 450, 90.0011, 450, 0.00114083, 464, 0.00117632, 465, 90.0012, 420, 260, -420, 260, -464, 89.9988, -464, -0.00117632, -450, -0.00114083, -450, 89.9989, -391, 89.999, -391.001, 239.999, 400, 240)

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="paredes/StaticBody2D"]
polygon = PackedVector2Array(399, 90.001, 450, 90.0011, 450, 0.00114083, 464, 0.00117632, 465, 90.0012, 420, 260, -420, 260, -464, 90, -464, 0, -450, -0.00114083, -450, 89.9989, -391, 89.999, -391.001, 239.999, 400, 240)

[node name="StaticBody2D2" type="StaticBody2D" parent="paredes"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="paredes/StaticBody2D2"]
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_ck6di")
disabled = true

[node name="CampoHockey" type="Sprite2D" parent="paredes"]
position = Vector2(-9, 10)
rotation = 1.5708
scale = Vector2(10, 10)
texture = ExtResource("3_nvie4")

[node name="starter_player_1" type="Marker2D" parent="."]
position = Vector2(-340, 2)

[node name="Disco_hockey" parent="." instance=ExtResource("4_6y8ti")]
unique_name_in_owner = true
position = Vector2(-100, 0)

[node name="Character_1" type="CharacterBody2D" parent="."]
position = Vector2(-340, 0)
scale = Vector2(1.5, 1.5)
collision_layer = 3
collision_mask = 3
collision_priority = 2.0
script = ExtResource("4_mjq13")

[node name="Sprite2D" type="Sprite2D" parent="Character_1"]
scale = Vector2(1.5, 1.5)
texture = ExtResource("5_ar8a7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Character_1"]
position = Vector2(-1, 0.333341)
rotation = 0.785398
scale = Vector2(1.5, 1.5)
shape = SubResource("CircleShape2D_2w4dl")

[node name="Character_2" type="AnimatableBody2D" parent="."]
position = Vector2(326, 0)

[node name="Sprite2D" type="Sprite2D" parent="Character_2"]
scale = Vector2(2.25, 2.25)
texture = ExtResource("6_wnr45")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Character_2"]
rotation = 0.785398
scale = Vector2(2.25, 2.25)
shape = SubResource("CircleShape2D_8843n")

[node name="AnimationPlayer1" type="AnimationPlayer" parent="Character_2"]
process_physics_priority = 1
libraries = {
"": SubResource("AnimationLibrary_piu85")
}

[node name="starter_disco" type="Marker2D" parent="."]
position = Vector2(-101, 1)

[node name="countdown" type="Node2D" parent="."]
script = ExtResource("7_tmmuo")

[node name="Goals_blue" type="AnimatedSprite2D" parent="countdown"]
position = Vector2(-211, -290)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_2f6hq")

[node name="Goals_red" type="AnimatedSprite2D" parent="countdown"]
position = Vector2(197, -283)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_2f6hq")

[node name="countdown" type="AnimatedSprite2D" parent="countdown"]
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_q61uo")
animation = &"count"

[node name="Camera" parent="." instance=ExtResource("32_bqao5")]

[connection signal="timeout" from="Timer_goal" to="Campo" method="_on_timer_goal_timeout"]
[connection signal="animation_finished" from="countdown/countdown" to="Character_1" method="_on_countdown_animation_finished"]
